--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -59,7 +59,7 @@ description: Template for team page
 
         {% if member.gscholar%}
         <li class="list-inline-item">
-          <a href="{{ member.gscholar}}"><i class="ai ai-google-scholar"></i></a>
+          <a href="{{ member.gscholar}}"><i class="fa fa-graduation-cap"></i></a>
         </li>
         {% endif %}
       </ul>
@@ -122,7 +122,7 @@ description: Template for team page
 
         {% if member.gscholar%}
         <li class="list-inline-item">
-          <a href="{{ member.gscholar}}"><i class="ai ai-google-scholar"></i></a>
+          <a href="{{ member.gscholar}}"><i class="fa fa-graduation-cap"></i></a>
         </li>
         {% endif %}
       </ul>
@@ -185,7 +185,7 @@ description: Template for team page
 
         {% if member.gscholar%}
         <li class="list-inline-item">
-          <a href="{{ member.gscholar}}"><i class="ai ai-google-scholar"></i></a>
+          <a href="{{ member.gscholar}}"><i class="fa fa-graduation-cap"></i></a>
         </li>
         {% endif %}
       </ul>
@@ -248,7 +248,7 @@ description: Template for team page
         
         {% if member.gscholar%}
         <li class="list-inline-item">
-          <a href="{{ member.gscholar}}"><i class="ai ai-google-scholar"></i></a>
+          <a href="{{ member.gscholar}}"><i class="fa fa-graduation-cap"></i></a>
         </li>
         {% endif %}
       </ul>
